--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,15 +6,13 @@
     </head>
     <body>
         <script type="text/javascript" src="angular-1.3.8.min.js"></script>
+        <script type="text/javascript" src="angular-route-1.3.8.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="achievements.js"></script>
         <script type="text/javascript" src="maintainer.js"></script>
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Current maintainer: Antanas Bastys</h1>
-                <p>Maintain maintain maintain</p>
-            </div>
-            <oop-achievements ng-controller="AchievementsController as achievementsCtrl"></oop-achievements>
+        <div class="container" ng-view>
+
+<!--             <oop-achievements ng-controller="AchievementsController as achievementsCtrl"></oop-achievements> -->
         </div>
     </body>
 </html>
